--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -417,6 +417,25 @@ a.thumbnail, div.thumbnail {
 
 .new-menu .navbar-default {
 	background: #337ab7;
+	margin: 0;
+}
+
+.page-menu {
+	background-color: #044470;
+    padding: 15px 15px;
+}
+
+.page-menu .btn-primary {
+	border-radius: 0;
+	padding: 15px 25px;
+}
+
+.page-menu .btn:first-child {
+	margin-right: 15px;
+}
+
+.page-menu .btn:last-child {
+	margin-right: 0;
 }
 
 .new-menu .navbar-default .navbar-brand {
@@ -826,7 +845,7 @@ a.thumbnail, div.thumbnail {
     -ms-transition: all 300ms linear;
     transition: all 300ms linear;
 }
-.panel, .pagination, #header .navbar, .page-header, .content .page-body, .ajax_loader, .teachers-page .thumbnail, .timetable .nav-tabs > li > a, .timetable table {
+.post, .panel, .pagination, #header .navbar, .page-header, .content .page-body, .ajax_loader, .teachers-page .thumbnail, .timetable .nav-tabs > li > a, .timetable table {
 	-webkit-box-shadow: 4px 4px 8px rgba(0,0,0,0.2);
     -moz-box-shadow: 4px 4px 8px rgba(0,0,0,0.2);
     box-shadow: 4px 4px 8px rgba(0,0,0,0.2);
@@ -1265,4 +1284,33 @@ a.thumbnail, div.thumbnail {
 	.room-train h2 {
 		font-size: 20px;
 	}
+}
+
+.teacher-avatar {
+	background-size: cover;
+	background-repeat: no-repeat;
+	border-radius: 50%;
+	width: 100%;
+	height: 250px;
+}
+
+.teacher-index .row {
+	margin-bottom: 20px;
+}
+
+.post {
+	background-color: #fff;
+}
+
+.post-header {
+	border-bottom: 2px solid #337ab7;
+	padding: 10px 15px;
+}
+
+.post-header > h2 {
+	margin: 0;
+}
+
+.post-content {
+	padding: 15px;
 }
