--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -48,7 +48,7 @@ body {
 #content { 
 	/*padding: 72px 0 0 0;*/
 
-	padding: 100px 0 30px 0;
+	padding: 100px 0 0 0;
 }
 
 .sidebar, .content {
@@ -998,7 +998,7 @@ a.thumbnail, div.thumbnail {
     background-color: #04446f;
     color: #fff;
     position: relative;
-    margin: -10px 0;
+    margin: 0;
     width: 44px;
     height: 44px;
 }
@@ -1313,4 +1313,43 @@ a.thumbnail, div.thumbnail {
 
 .post-content {
 	padding: 15px;
+}
+
+.teacher-dialog {
+	z-index: 300000;
+	max-width: 800px;
+	margin: 20px auto;
+	background: #FFF;
+	padding: 0;
+}
+
+.teacher-dialog h1 {
+	font-size: 24px;
+}
+
+.teacher-dialog .teacher-content {
+	margin-top: 20px;
+}
+
+.news-title {
+	font-size: 20px;
+	text-align: center;
+}
+
+.news-card {
+	background-color: #fff;
+	padding: 10px 15px;
+	/*max-height: 400px;
+	height: 100%;
+	z-index: 100;*/
+	margin-bottom: 20px;
+
+	-webkit-box-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+    -moz-box-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+    box-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+}
+
+.news-desc {
+	overflow: hidden;
+	z-index: -1;
 }
