--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -394,7 +394,16 @@ a.thumbnail, div.thumbnail {
 
 .page-body {
 	padding: 15px;
+	margin-bottom: 50px;
 	background-color: #fff;
+}
+
+.page-body .page-image {
+	max-width: 400px;
+	border: 4px solid #ccc;
+	float: left;
+	margin-right: 20px;
+	margin-bottom: 20px;
 }
 
 /* MENU */
@@ -677,8 +686,41 @@ a.thumbnail, div.thumbnail {
 }
 
 .carousel-inner > .item > a > img, .carousel-inner > .item > img {
-	height: 100vh;
+	height: 580px;
 	margin: 0 auto;
+}
+
+.banner-image:before {
+    background-color: rgba(51, 122, 183, 0.40);
+    content: " ";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+.banner-image {
+    background-clip: border-box;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 650px;
+}
+
+.banner-caption {
+    position: absolute;
+    margin-top: -400px;
+    text-align: center;
+    display: block;
+    width: 100%;
+    color: #fff;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.banner-caption .btn {
+	font-size: 18px;
+	padding: 15px 25px;
+	border-width: 4px;
 }
 
 /* list-group (sidebar) */
@@ -1338,18 +1380,78 @@ a.thumbnail, div.thumbnail {
 
 .news-card {
 	background-color: #fff;
-	padding: 10px 15px;
-	/*max-height: 400px;
-	height: 100%;
-	z-index: 100;*/
-	margin-bottom: 20px;
+	padding: 0;
+	margin-bottom: 50px;
 
 	-webkit-box-shadow: 2px 2px 4px rgba(0,0,0,0.2);
     -moz-box-shadow: 2px 2px 4px rgba(0,0,0,0.2);
     box-shadow: 2px 2px 4px rgba(0,0,0,0.2);
 }
 
-.news-desc {
-	overflow: hidden;
-	z-index: -1;
+.news-card .news-title {
+	margin: 10px 0;
+	text-align: center;
+}
+
+.news-card .news-desc {
+	padding: 5px 10px;
+}
+
+#feature {
+	padding: 100px 0;
+	background-color: #efefef;
+}
+
+.feature-card {
+    width: 100%;
+    /* height: 145px; */
+    background-color: #337ab7;
+    padding: 25px;
+    margin: 25px 0;
+    color: #fff;
+    border: 1px solid #1e5788;
+}
+
+.feature-card .feature-title {
+	font-size: 22px;
+	font-weight: 700;
+	margin-top: 0;
+}
+
+.feature-card .feature-content {
+	font-size: 16px;
+	font-weight: 400;
+	margin-bottom: 0;
+	height: 100%;
+	max-height: 160px;
+	overflow-y: scroll;
+}
+
+.feature-card .feature-btn {
+	color: #fff;
+	margin-top: 15px;
+	display: block;
+	text-align: right;
+}
+
+.post-card {
+	width: 100%;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    margin-bottom: 30px;
+}
+
+.post-card .post-image {
+	width: 100%;
+}
+
+.post-card .post-title {
+	font-size: 22px;
+	margin: 10px 15px;
+	text-align: center;
+}
+
+.post-card .post-title a {
+	color: #555;
+	font-weight: 400;
 }
