Работа над расписанием. Изменён просмотр расписание в frontend. Исправлены баги с созданием расписания в backend. Остаётся доработать создание и обновление расписания.

--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -306,7 +306,7 @@ a.thumbnail, div.thumbnail {
 }
 
 .timetable table {
-	max-width: 1000px;
+	/*max-width: 1000px;*/
 	width: 100%;
 	float: left;
 }
